# lasttree

./: .env  .gitignore  Cargo.toml  README.md  init.sh
migrations/: 20240606155223_create_artists_table.sql  20240611111430_create_artist_pairs_table.sql  20240616153314_create_api_key_table.sql  20240705095342_add_listeners_column_to_artists.sql  20240710094250_add_tags_column_to_artists.sql
src/: artist.rs  artists.rs  charts.rs  cli.rs  db.rs  dot.rs  genres.rs  html.rs  lastfm.rs  lib.rs  main.rs  player.rs  routes.rs  tests.rs  tree.rs  utils.rs
