[package]
name = "lasttree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
indexmap = "2.2.6"
itertools = "0.13.0"
lazy_static = "1.4.0"
maud = { version = "0.26.0", features = ["actix-web"] }
ordered-map = "0.4.2"
petgraph = "0.6.5"
reqwest = { version = "0.12.4" }                       #, features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
# https://github.com/launchbadge/sqlx#cargo-feature-flags
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
