[package]
name = "lasttree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0.86"
base64 = "0.22.1"
graphviz-rust = "0.9.0"
html_parser = "0.7.0"
indexmap = "2.2.6"
itertools = "0.13.0"
lazy_static = "1.4.0"
maud = { version = "0.26.0", features = ["actix-web"] }
petgraph = "0.6.5"
regex = "1.10.5"
reqwest = { version = "0.12.4" }                        #, features = ["blocking"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
# https://github.com/launchbadge/sqlx#cargo-feature-flags
sqlx = { version = "0.7.4", features = [
  "sqlite",
  "runtime-tokio",
  "migrate",
  "json",
] }
strum = "0.26.2"
strum_macros = "0.26.4"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.4"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
wiremock = "0.6.0"
youtube_dl = { version = "0.10.0", features = ["tokio"] }

# https://github.com/johnthagen/min-sized-rust/blob/main/Cargo.toml#L9
[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
strip = true      # Automatically strip symbols from the binary.
# panic = "abort"   # Abort on panic
